# ocean4dvarnet

./: 404.html  Makefile  README.md  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/actions/build-package/: action.yml
.github/actions/create-github-release/: action.yml
.github/actions/extract-version/: action.yml  extract_version.sh
.github/actions/install-requirements/: action.yml
.github/actions/publish-to-pypi/: action.yml
.github/workflows/: release.yml  test.yml  update-doc.yml
api/data/: index.html
api/evaluate/: index.html
api/models/: index.html
api/plot/: index.html
api/process/: index.html
api/train/: index.html
api/utils/: index.html
basic_env/: index.html
concepts/: index.html
contributing/: index.html
developing/: index.html
developing/basic_env/: index.html
developing/ci-cd/: index.html
developing/contributing/: index.html
developing/docstrings/: index.html
developing/documentation/: index.html
developing/environment/: index.html
developing/fork/: index.html
developing/guidelines/: index.html
developing/ocean-code_env/: index.html
developing/package-development/: index.html
developing/pr-workflow/: index.html
developing/pypi-packaging/: index.html
developing/testing/: index.html
docs/: basic_env.md  ci-cd.md  concepts.md  contributing.md  developing.md  index.md  installing.md  issues.md  management.md  package-development.md
docs/api/: evaluate.md  plot.md  train.md  utils.md
docs/developing/: contributing.md  docstrings.md  documentation.md  environment.md  fork.md  guidelines.md  index.md  ocean-code_env.md  pr-workflow.md  testing.md
docs/documentation/: data.md
docs/pkg-doc/: models.md  process.md
docs/usage/: index.md
installing/: index.html
issues/: index.html
ocean-code_env/: index.html
pkg-doc/data/: index.html
pkg-doc/evaluate/: index.html
pkg-doc/models/: index.html
pkg-doc/plot/: index.html
pkg-doc/process/: index.html
pkg-doc/train/: index.html
pkg-doc/utils/: index.html
scripts/: bump_version.py  get_version.py
search/: search_index.json
usage/: index.html
usage/inference/: index.html
usage/training/: index.html
