[project]
name = "ocean4dvarnet"
version = "0.0.11"
description = "A computer program whose purpose is to apply deep learning schemes to dynamical systems and ocean remote sensing data."
authors = [
    { name = "Ronan Fablet", email = "ronan.fablet@imt-atlantique.fr" },
    { name = "Quentin Febvre", email = "quentin.febvre@ifremer.fr" },
    { name = "Pierre Haslee", email = "author@example.com" },
    { name = "DanieL Zhu", email = "daniel.zhu@imt-atlantique.fr" },
    { name = "Hugo Georgenthum", email = "hugo.georgenthum@imt-atlantique.fr" },
    { name = "Braux Emmanuel", email = "emmanuel.braux@imt-atlantique.fr" },
]
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pytest-cov",
    "tox",
    "tomli",
    "tomli-w",
    "flake8",
    "black",
    "isort",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"
dependencies = [
    "xarray==2025.1.2",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "numpy==1.26.4",
    "pandas",
    "pytorch-lightning==2.3.3",
]

[tool.pylint.format]
max-line-length = 120

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
